--- a/stm/stm-language/pom.xml
+++ b/stm/stm-language/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>stm</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans</groupId>
-        <version>0.1.1</version>
+        <version>0.1.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>stm-language</artifactId>
