--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
             <dependency>
                 <groupId>org.modelinglab.actiongui.netbeans.wrappers</groupId>
                 <artifactId>ag-wrapper-module</artifactId>
-                <version>0.1.1</version>
+                <version>0.1.2-SNAPSHOT</version>
             </dependency>
             
             <dependency>
