--- a/stm/stm-file/pom.xml
+++ b/stm/stm-file/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>stm</artifactId>
-        <groupId>org.modelinglab.actiongui.netbeans</groupId>
+        <groupId>org.modelinglab.actiongui.netbeans.stm</groupId>
         <version>0.1.2-SNAPSHOT</version>
     </parent>
 
