Introduced Brace Macher support in DTM, STM and GTM

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /dtm/dtm-file/target/
 /stm/stm-language/target/
 /stm/stm-file/target/
+/dtm/dtm-braces-matcher/target/
+/gtm/gtm-braces-matcher/target/
+/stm/stm-braces-matcher/target/
