--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
                 <version>${netbeans.platform.version}</version>
                 <type>jar</type>
             </dependency>
+            <dependency>
+                <groupId>org.netbeans.api</groupId>
+                <artifactId>org-netbeans-modules-editor-bracesmatching</artifactId>
+                <version>${netbeans.platform.version}</version>
+                <type>jar</type>
+            </dependency>
             
             <dependency>
                 <groupId>junit</groupId>
