--- a/dtm/dtm-file/pom.xml
+++ b/dtm/dtm-file/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.dtm</groupId>
         <artifactId>dtm</artifactId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
     </parent>
 
     <artifactId>dtm-file</artifactId>
