--- a/library-wrappers/ag-wrapper-module/pom.xml
+++ b/library-wrappers/ag-wrapper-module/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>library-wrappers</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.wrappers</groupId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
     </parent>
 
     <artifactId>ag-wrapper-module</artifactId>
