--- a/stm/pom.xml
+++ b/stm/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>ag-netbeans-modules</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans</groupId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
     </parent>
     <groupId>org.modelinglab.actiongui.netbeans.stm</groupId>
     <artifactId>stm</artifactId>
