--- a/stm/stm-file/pom.xml
+++ b/stm/stm-file/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>stm</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.stm</groupId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
     </parent>
 
     <artifactId>stm-file</artifactId>
