--- a/gtm/gtm-language/pom.xml
+++ b/gtm/gtm-language/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.gtm</groupId>
         <artifactId>gtm</artifactId>
-        <version>0.1.2</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>gtm-language</artifactId>
