--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.modelinglab.actiongui.netbeans</groupId>
     <artifactId>ag-netbeans-modules</artifactId>
-    <version>0.1.2</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>ActionGUI Netbeans Modules</name>
 
