--- a/stm/stm-braces-matcher/pom.xml
+++ b/stm/stm-braces-matcher/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.stm</groupId>
         <artifactId>stm</artifactId>
-        <version>0.1.2</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <artifactId>stm-braces-matcher</artifactId>
     
