- First version of OCL auto-completion for security files. Still working on it.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /dtm/dtm-braces-matcher/target/
 /gtm/gtm-braces-matcher/target/
 /stm/stm-braces-matcher/target/
+/stm/stm-ocl-autocompletion/target/
