- Simplifying certain useless code.

--- a/stm/stm-ocl-autocompletion/pom.xml
+++ b/stm/stm-ocl-autocompletion/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>stmparser</artifactId>
             <version>2.5-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
