- Refactored as much code as the necessary. Two new general projects have been created: autocompletion (POM parent ) and ocl-autocompletion (module).

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /gtm/gtm-braces-matcher/target/
 /stm/stm-braces-matcher/target/
 /stm/stm-ocl-autocompletion/target/
+/autocompletion/actiongui-ocl-autocompletion/target/
