- First tested version of GUIML OCL auto-completion. Like in Security OCL auto-completion, the GUI model that is being edited can not contain neither lexical nor syntactical errors in order to activate the OCL auto-completion. This happens because there is information that must be collected form a parsed GUI model in order to enable the OCL auto-completion.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /stm/stm-braces-matcher/target/
 /stm/stm-ocl-autocompletion/target/
 /autocompletion/actiongui-ocl-autocompletion/target/
+/gtm/gtm-ocl-autocompletion/target/
