- Adding the new modules to the ActionGUI category.

--- a/autocompletion/actiongui-ocl-autocompletion/src/main/resources/org/modelinglab/actiongui/netbeans/autocompletion/ocl/Bundle.properties
+++ b/autocompletion/actiongui-ocl-autocompletion/src/main/resources/org/modelinglab/actiongui/netbeans/autocompletion/ocl/Bundle.properties
@@ -4,3 +4,4 @@
 #OpenIDE-Module-Long-Description=
 #OpenIDE-Module-Display-Category=
 #Thu Apr 24 14:02:02 CEST 2014
+OpenIDE-Module-Display-Category=ActionGUI
