--- a/gtm/gtm-ocl-autocompletion/src/main/resources/org/modelinglab/actiongui/netbeans/gtm/autocompletion/Bundle.properties
+++ b/gtm/gtm-ocl-autocompletion/src/main/resources/org/modelinglab/actiongui/netbeans/gtm/autocompletion/Bundle.properties
@@ -4,3 +4,4 @@
 #OpenIDE-Module-Long-Description=
 #OpenIDE-Module-Display-Category=
 #Thu Apr 24 18:02:40 CEST 2014
+OpenIDE-Module-Display-Category=ActionGUI
