- A first version of GUIML auto-completion provider for variables.

--- a/gtm/pom.xml
+++ b/gtm/pom.xml
@@ -17,5 +17,6 @@
         <module>gtm-language</module>
         <module>gtm-braces-matcher</module>
         <module>gtm-ocl-autocompletion</module>
+        <module>gtm-autocompletion</module>
     </modules>
 </project>
