--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /stm/stm-ocl-autocompletion/target/
 /autocompletion/actiongui-ocl-autocompletion/target/
 /gtm/gtm-ocl-autocompletion/target/
+/gtm/gtm-autocompletion/target/
