--- a/gtm/gtm-autocompletion/src/main/resources/org/modelinglab/actiongui/netbeans/gtm/autocompletion/Bundle.properties
+++ b/gtm/gtm-autocompletion/src/main/resources/org/modelinglab/actiongui/netbeans/gtm/autocompletion/Bundle.properties
@@ -4,3 +4,4 @@
 #OpenIDE-Module-Long-Description=
 #OpenIDE-Module-Display-Category=
 #Mon May 05 16:48:53 CEST 2014
+OpenIDE-Module-Display-Category=ActionGUI
