- First version of DTM OCL invariants auto-completion.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /autocompletion/actiongui-ocl-autocompletion/target/
 /gtm/gtm-ocl-autocompletion/target/
 /gtm/gtm-autocompletion/target/
+/dtm/dtm-invariants-ocl-autocompletion/target/
