- First solution for OCL auto-completion in DTM invariants. The problem is that characters '<' and '>' can be problematic in certain cases when they appear in OCL expressions, since they can create errors in the XML invariants file. The solution is that, in case OCL auto-completion is requested for XML invariant files, the offered completion items that contains the special chars '<' and '>' automatically will be placed for the correct ones. Furthermore, the sub-expression before the cursor that is used to collect the completion items, takes into account that could contain those special chars, replacing them for the normal ones in order to avoid OCL parsing errors. - For the rest of the tools, no extra changes are needed to deal with the special chars, because they are automatically well interpreted by the XML parser, replacing them for the normal ones.

--- a/dtm/dtm-invariants-ocl-autocompletion/pom.xml
+++ b/dtm/dtm-invariants-ocl-autocompletion/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.modelinglab.actiongui.netbeans.autocompletion</groupId>
             <artifactId>actiongui-ocl-autocompletion</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
