--- a/autocompletion/actiongui-ocl-autocompletion/pom.xml
+++ b/autocompletion/actiongui-ocl-autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.autocompletion</groupId>
         <artifactId>autocompletion</artifactId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
     <artifactId>actiongui-ocl-autocompletion</artifactId>
     <packaging>nbm</packaging>
