--- a/dtm/dtm-braces-matcher/pom.xml
+++ b/dtm/dtm-braces-matcher/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dtm</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.dtm</groupId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
 
     <artifactId>dtm-braces-matcher</artifactId>
