--- a/dtm/dtm-invariants-ocl-autocompletion/pom.xml
+++ b/dtm/dtm-invariants-ocl-autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.dtm</groupId>
         <artifactId>dtm</artifactId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
     <artifactId>dtm-invariants-ocl-autocompletion</artifactId>
     <packaging>nbm</packaging>
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>org.modelinglab.actiongui.maven</groupId>
             <artifactId>plugin-tools</artifactId>
-            <version>2.5-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -112,7 +112,7 @@
         <dependency>
             <groupId>org.modelinglab.actiongui.tasks.dtm-invariants</groupId>
             <artifactId>parser</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
