--- a/dtm/dtm-language/pom.xml
+++ b/dtm/dtm-language/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>dtm</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.dtm</groupId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
 
     <artifactId>dtm-language</artifactId>
