--- a/gtm/gtm-autocompletion/pom.xml
+++ b/gtm/gtm-autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.gtm</groupId>
         <artifactId>gtm</artifactId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
     <artifactId>gtm-autocompletion</artifactId>
     <packaging>nbm</packaging>
@@ -38,6 +38,7 @@
             </plugin>
         </plugins>
     </build>
+    
     <dependencies>
         <dependency>
             <groupId>org.netbeans.api</groupId>
@@ -73,7 +74,7 @@
         <dependency>
             <groupId>org.modelinglab.actiongui.maven</groupId>
             <artifactId>plugin-tools</artifactId>
-            <version>2.5-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
