--- a/gtm/gtm-braces-matcher/pom.xml
+++ b/gtm/gtm-braces-matcher/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.gtm</groupId>
         <artifactId>gtm</artifactId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
     <artifactId>gtm-braces-matcher</artifactId>
     <packaging>nbm</packaging>
