--- a/gtm/gtm-file/pom.xml
+++ b/gtm/gtm-file/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>gtm</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.gtm</groupId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
 
     <artifactId>gtm-file</artifactId>
