--- a/library-wrappers/ag-wrapper-module/pom.xml
+++ b/library-wrappers/ag-wrapper-module/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>library-wrappers</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.wrappers</groupId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
 
     <artifactId>ag-wrapper-module</artifactId>
@@ -14,7 +14,7 @@
     <name>ActionGUI Library Wrapper</name>
 
     <properties>
-        <ag.version>2.5-SNAPSHOT</ag.version>
+        <ag.version>${project.version}</ag.version>
     </properties>
     
     <dependencies>
