--- a/stm/stm-ocl-autocompletion/pom.xml
+++ b/stm/stm-ocl-autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>stm</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans.stm</groupId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>2.5</version>
     </parent>
 
     <groupId>org.modelinglab.actiongui.netbeans.stm</groupId>
@@ -71,13 +71,13 @@
         <dependency>
             <groupId>org.modelinglab.actiongui.netbeans.autocompletion</groupId>
             <artifactId>actiongui-ocl-autocompletion</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.modelinglab.actiongui.maven</groupId>
             <artifactId>plugin-tools</artifactId>
-            <version>2.5-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
