--- a/autocompletion/pom.xml
+++ b/autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans</groupId>
         <artifactId>ag-netbeans-modules</artifactId>
-        <version>2.5</version>
+        <version>2.6-SNAPSHOT</version>
     </parent>
     <groupId>org.modelinglab.actiongui.netbeans.autocompletion</groupId>
     <artifactId>autocompletion</artifactId>
