--- a/dtm/dtm-invariants-ocl-autocompletion/pom.xml
+++ b/dtm/dtm-invariants-ocl-autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.dtm</groupId>
         <artifactId>dtm</artifactId>
-        <version>2.5</version>
+        <version>2.6-SNAPSHOT</version>
     </parent>
     <artifactId>dtm-invariants-ocl-autocompletion</artifactId>
     <packaging>nbm</packaging>
