--- a/gtm/gtm-autocompletion/pom.xml
+++ b/gtm/gtm-autocompletion/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.modelinglab.actiongui.netbeans.gtm</groupId>
         <artifactId>gtm</artifactId>
-        <version>2.5</version>
+        <version>2.6-SNAPSHOT</version>
     </parent>
     <artifactId>gtm-autocompletion</artifactId>
     <packaging>nbm</packaging>
