--- a/gtm/pom.xml
+++ b/gtm/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>ag-netbeans-modules</artifactId>
         <groupId>org.modelinglab.actiongui.netbeans</groupId>
-        <version>2.5</version>
+        <version>2.6-SNAPSHOT</version>
     </parent>
     <groupId>org.modelinglab.actiongui.netbeans.gtm</groupId>
     <artifactId>gtm</artifactId>
